lab1/01-deployments-and-services.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend1
  template:
    metadata:
      labels:
        app: backend1
    spec:
      containers:
      - name: backend1
        image: hashicorp/http-echo
        args:
        - "-text=Hello from Backend 1"
        - "-listen=:5678"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: backend1-svc
spec:
  type: ClusterIP
  selector:
    app: backend1
  ports:
  - port: 80
    targetPort: 5678

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
      - name: backend2
        image: hashicorp/http-echo
        args:
        - "-text=Hello from Backend 2"
        - "-listen=:5678"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: backend2-svc
spec:
  type: ClusterIP
  selector:
    app: backend2
  ports:
  - port: 80
    targetPort: 5678

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend3-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend3
  template:
    metadata:
      labels:
        app: backend3
    spec:
      containers:
      - name: backend3
        image: hashicorp/http-echo
        args:
        - "-text=Hello from Backend 3"
        - "-listen=:5678"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: backend3-svc
spec:
  type: ClusterIP
  selector:
    app: backend3
  ports:
  - port: 80
    targetPort: 5678
