lab1/admin-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - name: admin
        image: hashicorp/http-echo
        args:
        - "-text=Hello from Admin"
        - "-listen=:5678"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: admin-svc
spec:
  type: ClusterIP
  selector:
    app: admin
  ports:
  - port: 80
    targetPort: 5678
