lab1/05-ingress-path-types.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pathtype-demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: myapp.local
    http:
      paths:
      # أي طلب يبدأ بـ /api → يروح للـ api-svc
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-svc
            port:
              number: 80
      # أي طلب بالظبط /admin → يروح للـ admin-svc
      - path: /admin
        pathType: Exact
        backend:
          service:
            name: admin-svc
            port:
              number: 80
      # أي طلب تاني → يروح للـ webapp-svc (fallback)
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webapp-svc
            port:
              number: 80
